--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 #
 # This file contains configuration flags to customize your site
 #
-
+center: 
 # Name of your site (displayed in the header)
 name: MI BLOG
-
+description:Mi Nombre es Kevin Josue Gómez Naula tengo 21 años de edad, soy de guayaquil soy el mayor de 2 hermanos; mis pasa tiempos son practicar deportes, leer, jugar videojuegos móviles, me gusta escuchar música electrónica, odio que la gente sea impuntual no me gusta esperar demasiado tiempo, de vez en cuando comparto tiempo con mis amigos como manera de distracción.
 #
 # Flags below are optional
 #
